﻿v1.1.8

System
* Encounters
** Change: The encounter start specifics have now changed. Mods now have direct control over starting encounters.
** New: The Ignore List for untracked units is back, this should increase performance in many encounters.
** New: New Condition added to each trigger type for possible victories. (Not only Unit deaths can trigger a victory condition)
** New: Debug output now includes the X, Y, Z location of the trigger unit when combat started.
* Textures
** New: New system added which engages after initial caching of Textures. This handles all Texture Loading during game play.

Unit Tracking
* New: When removing units from the tracking system, they will also be removed from the Ignore List to prevent Memory leaking over time.

Infernal Dawn
* Maelforge - Dragon Eggs
** New: This encounter should now trigger.
** New: Added trigger for Phase Two (Magma Cannons)
** New: Added trigger for Final Phase (Dragon Eggs)
* Maelforge - Final
** New: This encounter should now trigger.
** New: Added Personal Alert, Mechanic Spy and Timer for Hellfire.
** New: Added Personal Alert for Earthen Fissure.
** New: Added Personal Alert for Fiery Fissure.

Translations
* French updates
----
v1.1.7

Unit Tracking
* Change: Moved Percent triggers in to a unified location within Unit:Update()

System
* Removed: All Watchdog diagnosis tracking and saving have been removed including associated commands.
* Fixed: Errors related to the diagnostic tools will now be gone.

Hammerknell Fortress
* Akylios
** Change: Removed P2 percentage trigger and replaced with the more reliable Emote trigger.

----
v1.1.6

System
* Change: Start-up order has changed again slightly.

Tank-Swap
* Fixed: (Rare) error where Boss objects could become nil.

Unit Tracking
* Fixed: (Rare) error could be thrown in the Unit Tracker's Unit:Update() with nil values for Health. (This could cause inconsistency)

Infernal Dawn.
* Laethys
** New: Added Trigger for the start of Phase 2 combat.