@@ -10,7 +10,7 @@ Author = "Paul Snart"
 Website = "http://www.facebook.com/KingBossMods"
 Email = "snarty@gmail.com"
 
-Version = "1.1.8.469"
+Version = "1.1.8.470"
 
 Environment = "1.9"
 
